@@ -1690,6 +1690,9 @@ cl_symbols[] = {
 
 {"LOG1P", SI_ORDINARY, si_log1p, 1, OBJNULL},
 
+{EXT_ "*LOAD-POSITION*", SI_SPECIAL, NULL, -1, Cnil},
+{EXT_ "BC-FILE", SI_ORDINARY, si_bc_file, 1, Cnil},
+
 /* Tag for end of list */
 {NULL, CL_ORDINARY, NULL, -1, OBJNULL}};
 
